--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
@@ -9,7 +9,7 @@
 
 <body>
 	<div class="wrapper">
-		<form action="">
+		<form action="#">
 			<h2><em>Ingrese sus credenciales</em></h2>
 			<div class="input-box">
 				<input type="text" placeholder="Usuario" required>
