--- a/tabs.html
+++ b/tabs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
@@ -43,10 +43,10 @@
 				</div>
 
 				<div>
-					<img align="middle" src="minji.jpg" alt="Profile picture">
+					<img src="minji.jpg" alt="Profile picture">
 					<br>
 					<a href="" class="prev">&laquo; Anterior</a>
-					<a href="" class="next">Siguiente &raquo</a> 
+					<a href="" class="next">Siguiente &raquo;</a> 
 				</div>
 
 				<div>
